--- a/package.json
+++ b/package.json
@@ -11,10 +11,21 @@
     "@chakra-ui/theme-tools": "^2.0.2",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.9.0",
+    "@fontsource/open-sans": "^4.5.13",
+    "@fontsource/raleway": "^4.5.11",
+    "algoliasearch": "^4.14.2",
+    "date-fns": "^2.29.3",
+    "date-fns-tz": "^1.3.7",
     "framer-motion": "^6.3.0",
+    "instantsearch.css": "^7.4.5",
+    "instantsearch.js": "^4.49.1",
     "next": "latest",
+    "next-seo": "^5.15.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.6.0",
+    "react-instantsearch-hooks-server": "^6.38.1",
+    "react-instantsearch-hooks-web": "^6.38.1"
   },
   "devDependencies": {
     "@types/node": "^18.0.0",
